Critical fixes for Vercel production deployment
- Fix hardcoded localhost fallback in config.js to use /api instead
- Remove X-Frame-Options meta tag that was causing console warnings
- Add .env.production file for proper production environment variables
- Update vercel.json with build-time environment variables
- Ensure REACT_APP_BACKEND_URL is correctly set to /api for Vercel
- Fix CORS and manifest.json 401 errors by properly configuring API endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,14 @@
       "runtime": "nodejs18.x"
     }
   },
+  "build": {
+    "env": {
+      "REACT_APP_BACKEND_URL": "/api",
+      "REACT_APP_GOOGLE_MAPS_API_KEY": "AIzaSyBmuWNQs8-6Hce-TScTY4KbKfYPbmfFQMg",
+      "REACT_APP_NAME": "YourPlaces",
+      "REACT_APP_VERSION": "1.0.0"
+    }
+  },
   "env": {
     "MONGODB_URI": "@mongodb_uri",
     "JWT_SECRET": "@jwt_secret"
