--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,6 @@
-# Production environment variables for Vercel
-REACT_APP_BACKEND_URL=/api
+# Production environment variables
+# Set this to your deployed backend URL
+REACT_APP_BACKEND_URL=https://your-backend-url.herokuapp.com/api
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyBmuWNQs8-6Hce-TScTY4KbKfYPbmfFQMg
 REACT_APP_NAME=YourPlaces
 REACT_APP_VERSION=1.0.0
