FIX: Railway deployment configuration - backend only
- Fixed railway.toml to deploy backend only
- Removed problematic build script from root package.json
- Added RAILWAY_DEPLOYMENT.md with specific Railway deployment guide
- Railway now correctly builds only backend (cd backend && npm install)
- Frontend should be deployed separately to Vercel for optimal performance

This fixes the 'react-scripts: not found' error in Railway deployment.

--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
-# Railway Configuration
-# This file helps Railway understand your project structure
+# Railway Configuration - Backend Only
+# Frontend should be deployed separately to Vercel
 
 [build]
   command = "cd backend && npm install"
