--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cd backend && npm start",
     "dev": "cd backend && npm run start",
-    "build": "cd frontend && npm run build",
+    "install-backend": "cd backend && npm install",
+    "install-frontend": "cd frontend && npm install",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "repository": {
