--- a/railway.toml
+++ b/railway.toml
@@ -1,21 +1,12 @@
-# Railway Configuration - Backend Only
-# This ensures Railway only builds and deploys the backend
-
+# Railway Configuration - Minimal Backend Deployment
 [build]
-  command = "cd backend && npm ci --only=production"
 
 [deploy]
-  startCommand = "cd backend && npm start"
-  restartPolicyType = "ON_FAILURE"
-  restartPolicyMaxRetries = 10
+  startCommand = "cd backend && npm install && npm start"
 
 [env]
   MONGODB_URI = "your_mongodb_connection_string"
-  JWT_KEY = "your_jwt_secret_key"
+  JWT_KEY = "your_jwt_secret_key"  
   GOOGLE_MAPS_API_KEY = "your_google_maps_api_key"
   PORT = "5000"
   NODE_ENV = "production"
-
-[healthcheck]
-  path = "/api/users"
-  timeout = 30
