SETUP: Railway + Vercel deployment configuration
 Railway Backend Setup:
- Updated railway.toml with proper environment variables
- Removed unnecessary Docker files
- Fixed backend package.json scripts (node instead of nodemon for production)
- Removed Heroku Procfile

 Vercel Frontend Setup:
- Updated vercel.json with proper routing and environment variables
- Created .vercelignore to exclude backend
- Removed Docker and nginx files

 Cleanup:
- Deleted docker-compose.yml
- Removed all Docker-related files
- Removed nginx configuration

 Documentation:
- Created comprehensive DEPLOYMENT.md guide
- Included step-by-step instructions for both platforms
- Added troubleshooting and post-deployment checklist

 Ready for deployment:
- Backend  Railway
- Frontend  Vercel

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,13 +12,17 @@
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/index.html"
     }
   ],
   "env": {
-    "REACT_APP_BACKEND_URL": "https://your-backend-url.railway.app/api",
-    "REACT_APP_GOOGLE_MAPS_API_KEY": "AIzaSyBmuWNQs8-6Hce-TScTY4KbKfYPbmfFQMg",
+    "REACT_APP_BACKEND_URL": "$REACT_APP_BACKEND_URL",
+    "REACT_APP_GOOGLE_MAPS_API_KEY": "$REACT_APP_GOOGLE_MAPS_API_KEY",
     "REACT_APP_NAME": "YourPlaces",
     "REACT_APP_VERSION": "1.0.0"
   }
