--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,13 @@
-# Railway Configuration - Minimal Backend Deployment
+# Railway Configuration - Backend Only Deployment
 [build]
 
 [deploy]
   startCommand = "cd backend && npm install && npm start"
 
 [env]
-  MONGODB_URI = "your_mongodb_connection_string"
-  JWT_KEY = "your_jwt_secret_key"  
-  GOOGLE_MAPS_API_KEY = "your_google_maps_api_key"
-  PORT = "5000"
+  # These will be set in Railway dashboard
+  MONGODB_URI = "${{MONGODB_URI}}"
+  JWT_KEY = "${{JWT_KEY}}"  
+  GOOGLE_MAPS_API_KEY = "${{GOOGLE_MAPS_API_KEY}}"
+  PORT = "${{PORT}}"
   NODE_ENV = "production"
