FIX: Railway Node.js detection issue
- Fixed empty root package.json that was causing JSON parsing error
- Added proper package.json with Node.js project metadata
- Updated .railwayignore to keep root package.json for Railway detection
- Excluded frontend directory but kept essential files for Railway

This should resolve the 'Railpack could not determine how to build' error.

--- a/.railwayignore
+++ b/.railwayignore
@@ -1,7 +1,10 @@
 # Railway-specific ignore file
 # This helps Railway avoid caching issues
 
-# Node modules
+# Frontend directory (deploying backend only)
+frontend/
+
+# Node modules (except root package.json)
 node_modules/
 */node_modules/
 
@@ -11,7 +14,6 @@ dist/
 .next/
 
 # Environment files
-.env
 .env.local
 .env.production.local
 .env.development.local
@@ -28,8 +30,9 @@ yarn-error.log*
 .cache/
 .parcel-cache/
 
-# Dependencies
-package-lock.json
+# Dependencies (keep root package.json for Railway detection)
+backend/package-lock.json
+frontend/package-lock.json
 yarn.lock
 
 # OS generated files
