--- a/frontend/.vercelignore
+++ b/frontend/.vercelignore
@@ -1,37 +1,43 @@
 # Vercel Ignore File
+
 # Ignore backend directory since we're only deploying frontend to Vercel
 
 ../backend/
 node_modules/
 .git/
-*.log
+\*.log
 .env.local
 .env.development
 .env.test
 
 # IDE files
+
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
+_.swp
+_.swo
+\*~
 
 # OS generated files
-.DS_Store
+
+.DS*Store
 .DS_Store?
-._*
+.*\*
 .Spotlight-V100
 .Trashes
 ehthumbs.db
 Thumbs.db
 
 # Cache
+
 .cache/
 .eslintcache
 
 # Coverage
+
 coverage/
 
 # Documentation
-*.md
+
+\*.md
 !README.md
